gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visionaid-gateway-deployment
  namespace: visionaid-flux-system
  labels:
    app: visionaid-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visionaid-gateway
  template:
    metadata:
      labels:
        app: visionaid-gateway
    spec:
      containers:
      - name: visionaid-gateway
        image: registry.forge.hefr.ch/pi_aimarket-visionaid/gateway/visionaid-gateway:1683736290 # {"$imagepolicy": "visionaid-flux-system:gateway"}
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: visionaid-regsecret
