gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visionaid-gateway
  namespace: visionaid-flux-system
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: visionaid-gateway
  ports:
  - protocol: TCP
    port: 8000
