gateway/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visionaid-gateway-ingress
  namespace: visionaid-flux-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: visionaid-gateway.kube.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visionaid-gateway
                port:
                  number: 8000
  tls:
    - hosts:
      - visionaid-gateway.kube.isc.heia-fr.ch
